# torch-spyre

./: .clang-format  .clang-format-ignore  .pre-commit-config.yaml  CODEOWNERS  README.md  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: dependabot.yaml  linters.yaml
RFCs/: README.md
RFCs/47-TensorStickification/: RFC.md
codegen/: gen.py
codegen/inputs/: Metadata.yaml  RegistrationDeclarations.h  spyre_torch_ops.cpp
codegen/templates/: base.jinja2  fallback.jinja2  list_inp.jinja2  native_call.jinja2  view.jinja2  view_copy.jinja2
codegen/utils/: __init__.py  arg_mapper.py  shape_extractor.py  template_tools.py
examples/: softmax.py  tensor_allocate.py
requirements/: README.md  all.txt  build.txt  dev.txt  lint.txt  run.txt  test.txt
tests/: conftest.py  test_modules.py  test_ops.py  test_spyre.py
tests/_inductor/: test_building_blocks.py  test_inductor_ops.py  test_ops.py  utils_inductor.py  utils_inductor.pyi
tests/tensor/: test_tensor_layout.py
tools/: check-requirements.sh  mypy.sh  update-requirements.sh
torch_spyre/: __init__.py  __init__.pyi  _monkey_patch.py  constants.py  ops.py  version.py
torch_spyre/_inductor/: __init__.py  choices.py  constants.py  customops.py  decompositions.py  dsc.py  fake_ops.py  ir.py  lowering.py  opfuncs.py  opoverrides.py  spyre_kernel.py  stickify.py  tensors.py  wrapper.py
torch_spyre/_inductor/codegen/: compute_ops.py  data_ops.py  superdsc.py
torch_spyre/_inductor/passes/: __init__.py  conversions.py
torch_spyre/_inductor/runtime/: __init__.py  async_compile.py  kernel_runner.py
torch_spyre/csrc/: logging.cpp  logging.h  module.cpp  module.h  spyre_hooks.cpp  spyre_mem.cpp  spyre_mem.h  spyre_sendnn_utils.cpp  spyre_sendnn_utils.h  spyre_storage_impl.cpp  spyre_storage_impl.h  spyre_tensor_impl.cpp  spyre_tensor_impl.h  types_mapping.h
torch_spyre/utils/: device_interface.py  device_op_overrides.py  tensors.py
