[build-system]
requires = [
	"cmake>=3.26.1,<4.0.0",
	"jinja2",
    "ninja",
    "setuptools>=80",
    "torch>=2.7.0",  # Needed to use BuildExtension
    "wheel",
    "regex",
    "pyyaml", # needed for codegen
]
build-backend = "setuptools.build_meta"

[project]
name = "torch_spyre"
authors = [
    {name = "PyTorch-Spyre Core Team"}
]
description = "PyTorch-Spyre out of tree registration"
dependencies = ["torch>=2.7.0"]
requires-python = ">=3.8"
dynamic = ["version"]

[project.optional-dependencies]
test = ["transformers"]
dev = [
    "mypy>=1.11.1",
    "types-cachetools",
    "types-setuptools",
    "types-PyYAML",
    "types-requests",
    "types-psutil",
    "pydantic>=2.0"
]

[project.entry-points."torch.backends"]
torch_spyre = "torch_spyre:_autoload"

[tool.setuptools]
package-dir = { torch_spyre = "torch_spyre" }
package-data = { torch_spyre = ["*.dll", "*.dylib", "*.so"] }

[tool.setuptools.packages.find]
exclude = ["tests"]  # exclude packages matching these glob patterns (empty by default)

[tool.setuptools.dynamic]
version = {attr = "torch_spyre.version.__version__"}  # any module attribute compatible with ast.literal_eval
readme = {file = ["README.rst", "USAGE.rst"]}

[tool.ruff]
line-length = 88

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["torch_spyre._inductor.*"]
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = ["tests._inductor.utils"]
ignore_errors = true
