[build-system]
requires = [
	"cmake>=3.26.1,<4.0.0",
	"jinja2",
    "ninja",
    "setuptools>=80",
    "torch~=2.7.0",  # Needed to use BuildExtension
    "wheel",
    "regex",
    "pyyaml~=6.0.0", # needed for codegen
    "numpy~=2.3.4"
]
build-backend = "setuptools.build_meta"

[project]
name = "torch_spyre"
authors = [
    {name = "PyTorch-Spyre Core Team"}
]
description = "PyTorch-Spyre out of tree registration"
dependencies = [
    "torch~=2.7.0",
    "psutil~=7.1.0"
]
requires-python = ">=3.8"
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "expecttest~=0.3.0",
    "pqdm~=0.2.0",
    "pytest~=9.0.0",
    "pytest-asyncio",
    "pytest-forked",
    "pytest-rerunfailures",
    "pytest-shard",
    "pytest-timeout",
    "transformers"
    ]
lint = [
    "pre-commit~=4.0.1",
    # Type Checking
    "mypy~=1.13.0",
    "mypy-extensions~=1.0.0",
    "types-cachetools",
    "types-setuptools",
    "types-PyYAML",
    "types-requests",
    "types-psutil",
    # Linters
    "pydantic~=2.0",
    "black~=25.11.0",
    "isort~=7.0.0"
]

[project.entry-points."torch.backends"]
torch_spyre = "torch_spyre:_autoload"

[tool.setuptools]
package-dir = { torch_spyre = "torch_spyre" }
package-data = { torch_spyre = ["*.dll", "*.dylib", "*.so"] }

[tool.setuptools.packages.find]
exclude = ["tests"]  # exclude packages matching these glob patterns (empty by default)

[tool.setuptools.dynamic]
version = {attr = "torch_spyre.version.__version__"}  # any module attribute compatible with ast.literal_eval
readme = {file = ["README.rst", "USAGE.rst"]}

[tool.ruff]
line-length = 88

[tool.mypy]
ignore_missing_imports = true
exclude=["tests/_inductor"]

[[tool.mypy.overrides]]
module = ["torch_spyre._inductor.*"]
disable_error_code = ["attr-defined"]

[tool.uv]
required-version = ">=0.9.0"
index-url = "https://download.pytorch.org/whl/cpu"
extra-index-url = ["https://pypi.org/simple"]
index-strategy = "unsafe-best-match"

[tool.uv.pip]
universal = true
