[build-system]
requires = [
    # any change here should be reflected int the build dependencies below
    "build~=1.3.0",  # only required to build torch_sendnn
    "cmake>=3.26.1,<4.0.0",
    "expecttest~=0.3.0",
    "hypothesis~=6.148.1",
    "jinja2",
    "ninja",
    "numpy~=2.3.4",
    "pyyaml~=6.0.0", # needed for codegen
    "regex",
    "setuptools<=75.8.2",
    "torch~=2.7.1",  # Needed to use BuildExtension
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "torch_spyre"
authors = [
    {name = "PyTorch-Spyre Core Team"}
]
description = "PyTorch-Spyre out of tree registration"
dependencies = [
    "numpy~=2.3.4",
    "regex",
    "torch~=2.7.1",
    "psutil~=7.1.0"
]
requires-python = ">=3.8"
dynamic = ["version"]

[project.optional-dependencies]
build = [ # no-isolation build 
    # any change here should be reflected in the build system above
    "build~=1.3.0",  # only required to build torch_sendnn
    "cmake>=3.26.1,<4.0.0",
    "expecttest~=0.3.0",
    "hypothesis~=6.148.1",
    "jinja2",
    "ninja",
    "numpy~=2.3.4",
    "pyyaml~=6.0.0", # needed for codegen
    "regex",
    "setuptools<=75.8.2",
    "torch~=2.7.1",  # Needed to use BuildExtension
    "wheel"
]
test = [
    "pytest~=9.0.0",
#    "torch_sendnn", # must be installed manually
    "transformers"
]
lint = [
    "mypy~=1.13.0",
    "pre-commit~=4.0.1",
    "types-PyYAML",
    "uv~=0.9.10"
]

[project.entry-points."torch.backends"]
torch_spyre = "torch_spyre:_autoload"

[tool.setuptools]
package-dir = { torch_spyre = "torch_spyre" }
package-data = { torch_spyre = ["*.dll", "*.dylib", "*.so"] }

[tool.setuptools.packages.find]
exclude = ["tests"]  # exclude packages matching these glob patterns (empty by default)

[tool.setuptools.dynamic]
version = {attr = "torch_spyre.version.__version__"}  # any module attribute compatible with ast.literal_eval
readme = {file = ["README.rst", "USAGE.rst"]}

[tool.ruff]
line-length = 88

[tool.mypy]
ignore_missing_imports = true
exclude=["tests/_inductor"]

[[tool.mypy.overrides]]
module = ["torch_spyre._inductor.*"]
disable_error_code = ["attr-defined"]

[tool.uv]
required-version = ">=0.9.0"
index-url = "https://download.pytorch.org/whl/cpu"
extra-index-url = ["https://pypi.org/simple"]
index-strategy = "unsafe-best-match"
override-dependencies = ['setuptools<=75.8.2']

[tool.uv.pip]
universal = true
